--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- SortableJS для плавного DnD -->
+  <!-- SortableJS -->
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +24,12 @@
   <style>
     body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
     dialog::backdrop { background: rgba(0,0,0,.35); }
+
+    /* зона дропа, чтобы было куда попасть */
+    .col-drop { min-height: 180px; }
+    /* карточки не тащат картинки и текст */
+    .card { user-select: none; -webkit-user-drag: none; will-change: transform; }
+
     /* Скелетон */
     .shimmer { position: relative; overflow: hidden; background: #e5e7eb; border-radius: .5rem; }
     .shimmer::after{
@@ -32,6 +38,7 @@
       animation: shimmer 1.2s infinite;
     }
     @keyframes shimmer { 100% { transform: translateX(100%); } }
+
     /* Диалог на мобиле — фуллскрин */
     @media (max-width: 640px){
       dialog { width: 100vw !important; max-width: 100vw !important; height: 100vh; border-radius: 0 !important; }
@@ -71,17 +78,13 @@
         <div class="flex gap-2 w-full sm:w-auto">
           <input id="search" placeholder="Поиск по телефону / детали / комментарию"
                  class="px-3 py-2 rounded-lg bg-white border text-slate-900 flex-1 sm:w-80" />
-          <button id="btnAdd" class="px-3 py-2 rounded-lg bg-black text-white">+ Лид</button>
           <button id="btnLogout" class="px-3 py-2 rounded-lg bg-white border">Выйти</button>
         </div>
       </header>
 
       <!-- Скелетон при загрузке -->
       <div id="skeleton" class="mb-2">
-        <!-- На мобилке вертикально, на десктопе сетка -->
-        <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-6 gap-3">
-          <!-- скелетон построим программно -->
-        </div>
+        <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-6 gap-3"></div>
       </div>
 
       <!-- Доска: мобилка — столбцы друг под другом -->
@@ -132,6 +135,13 @@
     function escapeHtml(s){ return String(s).replace(/[&<>"']/g, c=>({"&":"&amp;","<":"&lt;","»":"&gt;","\"":"&quot;","'":"&#39;"}[c])); }
     function overlay(on, text){ const o=$('#overlay'); $('#overlayText').textContent=text||'Загрузка…'; o.classList.toggle('hidden', !on); o.classList.toggle('flex', on); }
 
+    // — защита от клика во время dnd
+    let DRAGGING = false;
+
+    // — сериализация переносов по карточке
+    const inflightMove = Object.create(null);   // id -> true/false
+    const pendingMove  = Object.create(null);   // id -> последний ожидаемый статус
+
     // API
     async function api(action, payload = {}) {
       const body = { action, ...payload };
@@ -163,13 +173,18 @@
     // ======= Рендер доски =======
     function renderBoard(){
       const board = $('#board'); board.innerHTML = '';
-      FUNNEL_COLUMNS.forEach(col => {
+      FUNNEL_COLUMNS.forEach((col, idx) => {
         const colBox = document.createElement('div');
         colBox.className = 'bg-white text-slate-900 border rounded-2xl p-3';
+        // кнопка "Добавить лид" только в первой колонке
+        const isLead = (idx === 0);
         colBox.innerHTML = `
           <div class="flex items-center justify-between mb-2">
             <div class="font-semibold">${col}</div>
-            <div class="text-xs text-slate-600 count">0</div>
+            <div class="flex items-center gap-2">
+              ${isLead ? '<button class="addLead px-2 py-1 text-xs rounded-md bg-black text-white">Добавить лид</button>' : ''}
+              <div class="text-xs text-slate-600 count">0</div>
+            </div>
           </div>
           <div class="col-drop space-y-2" data-status="${col}"></div>
         `;
@@ -177,6 +192,9 @@
         const items = state.rows.filter(r => String(r['Статус']||'').trim() === col);
         items.forEach(row => drop.appendChild(renderCard(row)));
         colBox.querySelector('.count').textContent = items.length;
+
+        if (isLead) colBox.querySelector('.addLead').onclick = addLead;
+
         board.appendChild(colBox);
       });
       setupDnD(); // включаем плавное DnD каждый раз после (пере)рендера
@@ -199,50 +217,129 @@
           <div>${escapeHtml(phone)}</div>
           ${manager?`<div class="px-2 py-0.5 bg-slate-200 rounded-full">${escapeHtml(manager)}</div>`:''}
         </div>`;
-      card.addEventListener('click', ()=> openCard(row.id));
+      card.addEventListener('click', ()=>{ if (!DRAGGING) openCard(row.id); });
       return card;
     }
 
-    // ======= DnD (оптимистично) =======
+    // ======= DnD (оптимистично с сериализацией) =======
     function setupDnD(){
       $$('.col-drop').forEach(el => {
-        new Sortable(el, {
-          group: 'kanban',
+        // убираем старые экземпляры
+        if (el._sortable && typeof el._sortable.destroy === 'function') {
+          el._sortable.destroy();
+        }
+
+        el._sortable = new Sortable(el, {
+          group: { name:'kanban', pull:true, put:true },
           animation: 180,
           forceFallback: true,
           fallbackOnBody: true,
           fallbackTolerance: 6,
+          emptyInsertThreshold: 5,
           ghostClass: 'opacity-60',
           dragClass: 'ring-2 ring-slate-300',
-          onAdd: async (evt) => {
-            const card = evt.item;
-            const id = card.dataset.id;
-            const newStatus = evt.to.dataset.status;
 
-            // локально меняем статус
-            const row = state.rows.find(r => String(r.id) === String(id));
-            const prevStatus = row ? row['Статус'] : null;
-            if (row) row['Статус'] = newStatus;
-
-            // визуальные счётчики
-            const oldHeader = evt.from.parentElement.querySelector('.count');
-            const newHeader = evt.to.parentElement.querySelector('.count');
-            if (oldHeader) oldHeader.textContent = (+oldHeader.textContent - 1);
-            if (newHeader) newHeader.textContent = (+newHeader.textContent + 1);
-
-            // сохраняем на сервере
-            const res = await api('move', { id, status: newStatus, token: state.token });
-            if (!res.ok) {
-              // откат
-              if (row) row['Статус'] = prevStatus;
-              evt.from.insertBefore(card, evt.from.children[evt.oldDraggableIndex] || null);
-              if (oldHeader) oldHeader.textContent = (+oldHeader.textContent + 1);
-              if (newHeader) newHeader.textContent = (+newHeader.textContent - 1);
-              alert('Ошибка перемещения' + (res.message ? (': ' + res.message) : ''));
-            }
-          }
+          onStart(){ DRAGGING = true; },
+          onEnd(evt){
+            // отпустили — разрешаем клики
+            setTimeout(()=>{ DRAGGING = false; }, 0);
+            if (evt.from !== evt.to) handleMove(evt);
+          },
+          onAdd: handleMove,
         });
       });
+    }
+
+    async function handleMove(evt){
+      const card = evt.item;
+      const id = card?.dataset?.id;
+      const newStatus = evt.to?.dataset?.status;
+      if (!id || !newStatus) return;
+
+      const row = state.rows.find(r => String(r.id) === String(id));
+      const prevStatus = row ? row['Статус'] : null;
+
+      if (row) row['Статус'] = newStatus;
+
+      // визуальные счётчики
+      const oldHeader = evt.from?.parentElement?.querySelector('.count');
+      const newHeader = evt.to?.parentElement?.querySelector('.count');
+      if (oldHeader) oldHeader.textContent = Math.max(0, (+oldHeader.textContent - 1));
+      if (newHeader) newHeader.textContent = (+newHeader.textContent + 1);
+
+      // если уже идёт запись этой карточки — запомним только последний статус
+      if (inflightMove[id]) {
+        pendingMove[id] = newStatus;
+        return;
+      }
+
+      inflightMove[id] = true;
+      let currentTarget = newStatus;
+      let ok = true;
+
+      while (true) {
+        const res = await api('move', { id, status: currentTarget, token: state.token });
+        if (!res.ok) {
+          ok = false;
+          break;
+        }
+        // есть ли накопившийся следующий целевой статус?
+        if (pendingMove[id] && pendingMove[id] !== currentTarget) {
+          currentTarget = pendingMove[id];
+          pendingMove[id] = undefined;
+          continue; // отправляем следующий
+        }
+        break; // очередь пуста
+      }
+
+      inflightMove[id] = false;
+      pendingMove[id] = undefined;
+
+      if (!ok) {
+        // откат визуально
+        if (row) row['Статус'] = prevStatus;
+        try {
+          evt.from.insertBefore(card, evt.from.children[evt.oldDraggableIndex] || null);
+          if (oldHeader) oldHeader.textContent = (+oldHeader.textContent + 1);
+          if (newHeader) newHeader.textContent = Math.max(0, (+newHeader.textContent - 1));
+        } catch(_){}
+        alert('Ошибка перемещения. Попробуйте ещё раз.');
+      }
+    }
+
+    // ======= Добавить лид (кнопка в колонке Лид) =======
+    async function addLead(){
+      const row = {
+        'п/п':'',
+        'Дата заказа': new Date().toISOString().slice(0,10),
+        'Телефон клиента':'',
+        'Цена,$':'',
+        'Артикул поставщика':'',
+        'Наименование детали':'Новый лид',
+        'Ссылка':'','Касса':'','Продажа':'','Закупка':'','Логисты':'',
+        'Возврат клиенту':'','Возврат от поставщика':'','Прибыль с заказа':'',
+        'Статус': FUNNEL_COLUMNS[0], 'Коментарий':''
+      };
+      if (state.hasManager) row[OPTIONAL_MANAGER_FIELD] = '';
+      overlay(true,'Создаём лид…');
+      const res = await api('create', { row, token: state.token });
+      overlay(false);
+      if (!res.ok) return alert('Ошибка создания');
+
+      // добавим в локальное состояние и сразу в DOM первой колонки
+      state.rows.unshift(res.row);
+
+      const firstCol = $(`.col-drop[data-status="${CSS.escape(FUNNEL_COLUMNS[0])}"]`);
+      if (firstCol) {
+        firstCol.prepend(renderCard(res.row));
+        const cnt = firstCol.parentElement.querySelector('.count');
+        if (cnt) cnt.textContent = (+cnt.textContent + 1);
+        setupDnD(); // на всякий случай (новая карточка)
+      } else {
+        renderBoard();
+      }
+
+      openCard(res.row.id);
     }
 
     // ======= Карточка =======
@@ -305,21 +402,6 @@
       $('#dlgCard').close();
     };
 
-    // ======= Новый лид =======
-    $('#btnAdd').onclick = async ()=>{
-      const row = {
-        'п/п':'','Дата заказа': new Date().toISOString().slice(0,10),'Телефон клиента':'','Цена,$':'',
-        'Артикул поставщика':'','Наименование детали':'Новый лид','Ссылка':'','Касса':'','Продажа':'','Закупка':'','Логисты':'',
-        'Возврат клиенту':'','Возврат от поставщика':'','Прибыль с заказа':'','Статус': FUNNEL_COLUMNS[0],'Коментарий':''
-      };
-      if (state.hasManager) row[OPTIONAL_MANAGER_FIELD] = '';
-      overlay(true,'Создаём лид…');
-      const res = await api('create', { row, token: state.token });
-      overlay(false);
-      if (!res.ok) return alert('Ошибка создания');
-      state.rows.unshift(res.row); renderBoard(); openCard(res.row.id);
-    };
-
     // ======= Поиск =======
     $('#search').addEventListener('input', ()=>{
       const q = $('#search').value.trim().toLowerCase();
@@ -333,7 +415,7 @@
       });
     });
 
-    // ======= Быстрый вход (UI сразу, данные догружаем) =======
+    // ======= Вход: UI сразу, данные фоном =======
     $('#doLogin').onclick = async (ev)=>{
       ev.preventDefault();
       const pwd = $('#pwd').value.trim();
@@ -347,10 +429,9 @@
       if (!r.ok) { err.textContent = r.message || r.error || 'Неверный пароль'; err.classList.remove('hidden'); return; }
 
       state.token = r.token; localStorage.setItem('crm_token', state.token);
-
-      // Сразу показываем приложение со скелетонами (не ждём list)
+      // сразу показываем приложение со скелетонами
       showApp(true); renderSkeleton();
-      // Данные дотягиваем асинхронно
+      // подтянем данные фоном
       void loadData();
     };
 
@@ -364,11 +445,10 @@
       state.hasManager = state.rows.some(r => r && Object.prototype.hasOwnProperty.call(r, OPTIONAL_MANAGER_FIELD));
       $('#f_status').innerHTML = FUNNEL_COLUMNS.map(s=>`<option>${s}</option>`).join('');
       renderBoard();
-      // прячем скелетон, показываем доску
       $('#skeleton').classList.add('hidden'); $('#board').classList.remove('hidden');
     }
 
-    // Автовход: сразу UI + скелетоны, данные подтянем
+    // Автовход
     (async function bootstrap(){
       if (state.token) {
         showApp(true); renderSkeleton();
