--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>CRM Воронка — Google Sheets</title>
 
   <!-- PWA / иконки -->
-  <link rel="icon" href="/fЛого1-Photoroom.png" type="image/svg+xml">
-  <link rel="alternate icon" href="/Лого1-Photoroom.png" type="image/png">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="alternate icon" href="/favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#000000">
